--- a/src/css/components/_demobtn.scss
+++ b/src/css/components/_demobtn.scss
@@ -1,10 +1,3 @@
-.navigation__demo--btn {
-  align-items: baseline;
-  align-self: baseline;
-  border-radius: 30px;
-  padding: 0.85em;
-  border: 0;
-  background-color: _palette(bg);
-  box-shadow: 0 0 .4em _palette(textdark);
-  font-weight: 600;
+.demo-btn {
+@include clickup-btn(_palette(bg))
 }
