FeatureGrid: added a feature grid using grid layout

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,11 +11,18 @@
 
 // Layout
 @import 'layout/footer';
+@import 'layout/hero';
+@import 'layout/grid';
 
 // Components
 @import 'components/navbar';
 @import 'components/demobtn';
 @import 'components/button';
+@import 'components/herocard';
+@import 'components/featurebutton';
+@import 'components/featurecard';
+@import 'components/featuretext';
+
 
 
 
