Buttons: added active styles for navbar buttons

--- a/src/css/libs/_functions.scss
+++ b/src/css/libs/_functions.scss
@@ -72,3 +72,7 @@
 @function  _fontweight($keys...) {
 	@return val($fontweight, $keys...);
 }
+
+@function _fontsize($keys...) {
+	@return val($fontsize, $keys...);
+}
