--- a/src/css/libs/_vars.scss
+++ b/src/css/libs/_vars.scss
@@ -31,3 +31,12 @@ $fontweight: (
   bolder: 600,
   bold: 800
 );
+
+$fontsize: (
+  sm: 0.5rem,
+  md: .75rem,
+  reg: 1rem,
+  large: 1.25rem,
+  xlarge: 1.50rem,
+  xxlarge: 2rem
+);
