--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,6 +13,7 @@
 @import 'layout/footer';
 @import 'layout/hero';
 @import 'layout/grid';
+@import 'layout/testimonials';
 
 // Components
 @import 'components/navbar';
@@ -22,6 +23,7 @@
 @import 'components/featurebutton';
 @import 'components/featurecard';
 @import 'components/featuretext';
+
 
 
 
