--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,9 +14,10 @@
 @import 'layout/hero';
 @import 'layout/grid';
 @import 'layout/testimonials';
+@import 'layout/slider';
+@import 'layout/navbar';
 
 // Components
-@import 'components/navbar';
 @import 'components/demobtn';
 @import 'components/button';
 @import 'components/herocard';
