--- a/src/css/page/_base.scss
+++ b/src/css/page/_base.scss
@@ -29,7 +29,7 @@ main {
 a {
   text-decoration: none;
   font-weight: 600;
-  color: _palette(textlight);
+  color: _palette(textlessdark);
 
   &:hover {
     color: _palette(textdark);
