Added: addtional btn stylings

--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -1,3 +1,8 @@
 .btn {
   @include clickup-btn(_palette(pinkld));
 }
+
+.header-btn {
+  color: _palette(bg);
+  @include clickup-btn(_palette(purpledark));
+}
