ClipPath: trying out clip path for trapezoid feature cards

--- a/src/css/components/_featurecard.scss
+++ b/src/css/components/_featurecard.scss
@@ -1,6 +1,7 @@
 .feature__grid {
   > section {
-      &:nth-child(2) > .content {
+   
+    &:nth-child(2) > .content {
         background-color: _palette(cyanlight);
       }
       &:nth-child(3) > .content {
@@ -10,6 +11,24 @@
       .content {
         border-radius: _border(rounded_large);
         background-color: _palette(pinklight);
+        // padding: 5rem;
+        padding: 2.75rem;
+        margin: 1.25rem;
+        h2 {
+          padding-top: 0rem;
+          padding-left: 1.75rem;
+          padding-right: 1.75rem;
+          padding-bottom: 0;
+        }
+        p {
+          padding-right: 1.75rem;
+          padding-left: 1.75rem;
+          padding-top: 0;
+          padding-bottom: 0;
+        }
+        button {
+          padding: 1.75rem;
+        }
       }
    
   }
