--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,7 +12,7 @@
 // Layout
 @import 'layout/footer';
 @import 'layout/hero';
-@import 'layout/grid';
+@import 'layout/featuregrid';
 @import 'layout/testimonials';
 @import 'layout/slider';
 @import 'layout/navbar';
