--- a/src/css/components/_herocard.scss
+++ b/src/css/components/_herocard.scss
@@ -1,17 +1,20 @@
 .hero__card {
   margin: 5rem auto;
   background: _palette(pinklight);
-  padding: 1.65rem;
+  padding: 5rem 0;
   border-radius: _border(rounded_large);
-  max-width: 50%;
+  max-width: 75%;
   align-self: center;
 
   &--title {
     font-size: 2rem;
-    margin: 0;
+    margin: 0 3rem;
+    padding: 0 3.5rem;
   }
   
   &--text {
     line-height: 1.5rem;
+    padding: 0 3.5rem;
+    margin: 0 3rem;
   }
 }
