--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @import 'libs/breakpoints';
 @import 'libs/demobtn';
 @import 'libs/functions';
+@import 'libs/btncontainer';
 @import 'libs/vars';
 
 
@@ -18,7 +19,6 @@
 @import 'layout/navbar';
 
 // Components
-@import 'components/demobtn';
 @import 'components/button';
 @import 'components/herocard';
 @import 'components/featurebutton';
