--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -2,17 +2,42 @@
   position: relative;
   display: flex;
   flex-direction: column;
-
-  .footer__area--top {
+  margin-bottom: 3rem;
+  border-top: 3px solid rgba(0, 0, 0, 0.1);
+  .footer__buttons {
+    display: flex;
+    &:first-child {
+      margin-right: 1.25rem;
+    }
+  }
+  .footer__top {
     display: flex;
     align-items: baseline;
     justify-content: space-around;
+    padding: 5rem;
+    .footer__title {
+      > h3 {
+        font-size: _fontsize(xxlarge);
+      }
+      .footer__text {
+        font-size: _fontsize(large);
+      }
+    }
+    .btn__container {
+      margin-left: 1.25rem;
+      @include clickup-btn(_palette(bg));
+    }
+
+    button {
+      border: 0;
+    }
   }
-  .footer__area--bottom {
+  .footer__bottom {
     margin-top: 5rem;
+    padding: 6rem;
     display: flex;
     justify-content: space-around;
-    .footer__area--info {
+    .footer__info {
       display: flex;
       flex-direction: column;
     }
