--- a/src/css/layout/_slider.scss
+++ b/src/css/layout/_slider.scss
@@ -4,13 +4,13 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 0px 0.5rem _palette(purpledark);
+  box-shadow: 0px 8px 0.5rem _palette(purpledark);
   h2 {
     color: _palette(bg);
-    padding: 5rem 2rem;
+    padding: 0 2rem;
     font-size: _fontsize(xxlarge);
     text-align: left;
-    margin-left: 8rem;
+    margin-left: 10rem;
   }
   
   .slider__container {
