--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -18,6 +18,7 @@
 @import 'layout/navbar';
 
 // Components
+@import 'components/logo';
 @import 'components/button';
 @import 'components/herocard';
 @import 'components/featurebutton';
