--- a/src/css/layout/_slider.scss
+++ b/src/css/layout/_slider.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   box-shadow: 0px 8px 0.5rem _palette(purpledark);
+  max-width: 100%;
+
   h2 {
     color: _palette(bg);
     padding: 0 2rem;
