--- a/src/css/libs/_demobtn.scss
+++ b/src/css/libs/_demobtn.scss
@@ -1,8 +1,8 @@
 @mixin clickup-btn($bg) {
   border-radius: _border(rounded_large);
-  padding: 0.85em;
+  padding: 0.75rem 1.75rem;
   border: 0;
   background-color: $bg;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  font-weight: 600;
+  font-weight: _fontweight(regular);
 }
