--- a/src/css/layout/_hero.scss
+++ b/src/css/layout/_hero.scss
@@ -29,6 +29,7 @@
     &--title {
       font-size:_fontsize(title);
         @include respond-to('md') {
+          text-align: left;
         }
     }  
 
@@ -43,6 +44,7 @@
         line-height: 30px;
         margin-bottom: 2.5rem;
         margin-right: 15rem;
+        text-align: left;
       }
     }
 
@@ -58,10 +60,26 @@
 
   .hero__area--two {
     flex: 1;
-
+    margin-top: 20vh;
+    
     .hero__card {
       display: flex;
       align-items: center;
+      max-width: 65%;
+      &--copy {
+        max-width: 75%;
+      }
+      &--title {
+        font-size: _fontsize(title);
+      }
+
+      &--text {
+        p{
+          line-height: 30px;
+        margin-right: 8rem;
+        }
+        
+      }
     }
   }
 
