--- a/src/css/layout/_featuregrid.scss
+++ b/src/css/layout/_featuregrid.scss
@@ -1,18 +1,17 @@
 .feature__grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(900px, 1fr));
   margin-top: 3rem;
   margin-bottom: 12rem;
 
   > section {
     display: flex;
     flex-direction: row;
-
+    margin: 0 5rem;
     img {
      width: 100%;
-     height: 50%;
      margin-top: 8rem;
-     margin-right: -65px;
+     margin-right: -20%;
      z-index: 999;
      flex: 1;
     }
