--- a/src/css/layout/_slider.scss
+++ b/src/css/layout/_slider.scss
@@ -6,7 +6,10 @@
   flex-direction: column;
   box-shadow: 0px 8px 0.5rem _palette(purpledark);
   max-width: 100%;
-
+  @include respond-to('md') {
+    max-width: 65%;
+    margin: 0 auto;
+  }
   h2 {
     color: _palette(bg);
     padding: 0 2rem;
