--- a/src/css/libs/_vars.scss
+++ b/src/css/libs/_vars.scss
@@ -4,13 +4,13 @@ $palette: (
   textlessdark: hsl(211, 12%, 43%),
   bg: hsl(216, 33%, 97%),
   pinklight: hsl(341, 100%, 95%),
-  pinkld: hsl(336, 100%, 77%),
-  pinkdark:hsl(330, 79%, 56%),
-  purplelight: hsl(261, 54%, 68%),
+  pinkld: rgba(240, 99, 184, 0.2),
+  pinkdark:rgb(240, 99, 184),
+  purplelight: rgba(156, 105, 226, 0.2),
   purpleld: hsl(261, 68%, 84%),
   purpledark: hsl(261, 47%, 58%),
-  bluelight: hsl(205, 79%, 92%),
-  cyanlight: hsl(186, 100%, 94%)
+  bluelight: rgba(45, 156, 219, 0.2),
+  cyanlight: rgba(104, 201, 186, 0.2)
 );
 
 $border: (
