--- a/src/css/layout/_hero.scss
+++ b/src/css/layout/_hero.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 30vh;
+  margin-top: 50vh;
 
   @include respond-to('md') {
     margin-top: 5rem;
@@ -10,15 +10,15 @@
 
   .hero__area--one {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-
+    margin: 0 auto;
   
   .hero__img--container {
     max-width: 100%;
 
-    @include respond-to('md') {
+    @include respond-to('large') {
       margin-left: -250px;
       margin-bottom: -250px;
     }
@@ -28,7 +28,7 @@
     text-align: center;
     &--title {
       font-size:_fontsize(title);
-        @include respond-to('md') {
+        @include respond-to('large') {
           text-align: left;
         }
     }  
@@ -39,7 +39,7 @@
       line-height: 50px;
       margin-top: 0;
       text-align: center;
-      @include respond-to('md') {
+      @include respond-to('large') {
         font-size: _fontsize(reg);
         line-height: 30px;
         margin-bottom: 2.5rem;
@@ -48,12 +48,12 @@
       }
     }
 
-    @include respond-to('md') {
+    @include respond-to('large') {
       max-width: 30%;
       text-align: left;
     }
   }
-  @include  respond-to('md') {
+  @include  respond-to('large') {
     flex-direction: row;
   }
   }
@@ -64,19 +64,29 @@
     
     .hero__card {
       display: flex;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      max-width: 65%;
-      &--copy {
+      max-width: 100%;
+      @include respond-to('large') {
+        flex-direction: row;
         max-width: 75%;
+      }
+      &--copy {
+        max-width: 100%;
       }
       &--title {
         font-size: _fontsize(title);
       }
 
       &--text {
+        line-height: 30px;
+        font-size: _fontsize(xlarge);
         p{
-          line-height: 30px;
-        margin-right: 8rem;
+          
+          @include respond-to('md') {
+
+          }
         }
         
       }
