--- a/src/css/layout/_slider.scss
+++ b/src/css/layout/_slider.scss
@@ -6,13 +6,13 @@
   flex-direction: column;
   box-shadow: 0px 8px 0.5rem _palette(purpledark);
   max-width: 100%;
-  @include respond-to('md') {
+  @include respond-to('large') {
     max-width: 65%;
     margin: 0 auto;
   }
   h2 {
     color: _palette(bg);
-    padding: 0 2rem;
+    padding: 4rem 3rem 2rem;
     font-size: _fontsize(xxlarge);
     text-align: left;
     margin-left: 10rem;
@@ -24,7 +24,7 @@
     width: 65%;
     height: 350px;
     margin: 0 auto;
-    padding-bottom: 5rem;
+    padding-bottom: 10rem;
     display: flex;
     flex-direction: column;
     .slide {
@@ -33,7 +33,9 @@
       background-color: _palette(bg);
       border-radius: _border(rounded_large);
       position: absolute;
-      padding-bottom: 2.5rem;
+      padding-bottom: 1.5rem;
+      box-shadow: 0px 8px 0.2rem _palette(purpleld);
+
       &.active {
         transform: translate(0,0);
 
@@ -49,13 +51,15 @@
         display: flex;
         align-items: baseline;
         flex-direction: column;
-
+        padding: 1.65rem;
+        margin: 0;
         .slide__content--row {
           display: flex;
+          margin-left: 2.5rem;
+          margin-top: 1.5rem;
         }
       }
       .slide__content--title {
-        max-width: 30%;
         padding: 1.25rem;
        
         span {
@@ -68,9 +72,10 @@
       
       .slide__content--copy {
         max-width: 75%;
-        margin: auto;
+        margin: 0 auto;
         p {
           padding: 1.65rem;
+          margin: 0;
         }
       }
       .slide__content--image {
