--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,5 @@
 // Google Fonts
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Open+Sans:ital,wght@1,300&display=swap');// libs
-@import 'libs/breakpoints';
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;900&display=swap');@import 'libs/breakpoints';
 @import 'libs/demobtn';
 @import 'libs/functions';
 @import 'libs/btncontainer';
