Added background images to feature cards

--- a/src/css/layout/_navbar.scss
+++ b/src/css/layout/_navbar.scss
@@ -21,6 +21,7 @@
     margin-top: 0.75rem;
     cursor: pointer;
     border: none;
+    background: transparent;
     font-size: _fontsize(reg);
     font-weight: _fontweight(bolder);
   }
