FooterBottm: bottom section of footer is now a column instead of row on smaller screen sizes

--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  // position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 3rem;
@@ -38,6 +37,7 @@
     padding: 6rem;
     display: flex;
     justify-content: space-around;
+    flex-direction: column;
     
     @include respond-to('large') {
       margin-left: 6rem;
