Fixed: set the background to transparent on footer demo btn

--- a/src/css/components/_herocard.scss
+++ b/src/css/components/_herocard.scss
@@ -4,6 +4,9 @@
   padding: 5rem 0;
   border-radius: _border(rounded_large);
   max-width: 100%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   align-self: center;
 
   &--title {
