--- a/src/css/layout/_hero.scss
+++ b/src/css/layout/_hero.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   margin-top: 50vh;
-
+  width: 100%;
   @include respond-to('md') {
     margin-top: 5rem;
   }
@@ -61,7 +61,7 @@
   .hero__area--two {
     flex: 1;
     margin-top: 20vh;
-    
+    max-width: 100%;
     .hero__card {
       display: flex;
       flex-direction: column;
@@ -82,13 +82,6 @@
       &--text {
         line-height: 30px;
         font-size: _fontsize(xlarge);
-        p{
-          
-          @include respond-to('md') {
-
-          }
-        }
-        
       }
     }
   }
