--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 3rem;
+  margin-top: 3rem;
   border-top: 3px solid rgba(0, 0, 0, 0.1);
   .footer__buttons {
     display: flex;
@@ -25,7 +26,7 @@
     .btn__container {
       margin-left: 1.25rem;
       @include clickup-btn(_palette(bg));
-      
+
       button {
         border: 0;
         font-weight: _fontweight(bolder);
